--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,6 +30,7 @@ body {
         }
     }
     button {
+        outline: none;
         border: none;
         background: transparent;
         font-size: 1.5rem;
